# neuralnets

./: .gitignore  README.md  checkpoint.py  config.py  config_manager.py  data.py  fineweb.py  fix_checkpoint.py  inference.py  inference_gpt2.py  model.py  play.py  pyproject.toml  space.ipynb  test_model.py  test_model_fixed.py  tokenizer.py  train.py  train_gpt2.py  train_me.py
experiments/openwebtext-v1/: config.json
experiments/shakespeare-test/: config.json
experiments/shakespeare-v2/: config.json
experiments/tinystories-v1/: config.json
nanogpt/: __init__.py  checkpoint.py  config_manager.py  data.py  inference.py  model.py  prepare_openwebtext.py  prepare_tinystories.py  train.py
nanogpt/wandb/: latest-run
nanogpt/wandb/run-20251007_163909-8m77u6wx/: run-8m77u6wx.wandb
nanogpt/wandb/run-20251007_163909-8m77u6wx/files/: config.yaml  wandb-metadata.json  wandb-summary.json
nanogpt/wandb/run-20251007_164644-bmvm200i/: run-bmvm200i.wandb
nanogpt/wandb/run-20251007_164644-bmvm200i/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
nanogpt/wandb/run-20251007_165939-pc2ohyup/: run-pc2ohyup.wandb
nanogpt/wandb/run-20251007_165939-pc2ohyup/files/: config.yaml  wandb-metadata.json  wandb-summary.json
