[project]
name = "nanogpt"
version = "0.1.0"
description = "A simple GPT implementation"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "requests>=2.31.0",
    "tokenizers>=0.15.0",
    "wandb>=0.16.0",
    "tqdm>=4.66.0",
    "datasets>=2.14.0",
    "tiktoken>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []
